7/20/12 Use @EqualsAndHashCode(callSuper = false) instead of @Data to avoid compile time warnings, see #3374
7/20/12 Merged getScaledInstance and times into a single method, see #3374
7/20/12 Merged getSubtractedInstance and minus into a single method, see #3374
7/20/12 Merged getAddedInstance and plus into a single method, see #3374
7/20/12 Merged getDistance and distance into a single method, see #3374
7/20/12 Style change, made single line methods read in a single line for Vector2D classes, see #3374
7/20/12 Added equals/hashcode/toString using Lombok, see #3374
7/20/12 Renamed ImmutableVector2D->Vector2D, see #3374
7/20/12 Renamed Vector2D->MutableVector2D, see #3374
7/19/12 Changed the Vector2D hierarchy from "Vector2D extends ImmutableVector2D" to "Vector2D extends AbstractVector2D + ImmutableVector2D extends AbstractVector2D", see #3374
7/19/12 Moved more methods from ImmutableVector2D to AbstractVector2D, see #3374
7/19/12 Extracted AbstractVector2D as superclass of ImmutableVector2D, see #3374
7/19/12 Added Lombok and Functional Java as dependencies, see #3390
7/17/12 add BufferedImageUtils.toImage(Icon)
7/11/12 #3375, Load the audio input stream and decorate with a BufferedInputStream to support mark/reset, see #3375
6/29/12 #3364, clicking on the sponsor image opens a web browser to the URL
6/19/12 Added mathematics-related classes: Optimization1D for one-dimensional function minimization, and double-versions of the very useful Ray and Plane classes used in 3D sims.
6/12/12 Added DampedMassSpringSystem for solving second-order linear differential equations (which is the same as a damped spring system)
6/10/12 Added "subtract" method to IntegerProperty
5/29/12 #3166 removed check for -sponsorPrototype command line arg, presence of sponsor.properties alone will trigger feature
5/29/12 #3166 i18n of sponsor feature
5/8/2012 #3326 Converted from InternalError to HeadlessException in catch block