@@ -9,7 +9,6 @@ import edu.colorado.phet.beerslawlab.concentration.ConcentrationModule;
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationConfig;
 import edu.colorado.phet.common.phetcommon.application.PhetApplicationLauncher;
 import edu.colorado.phet.common.piccolophet.PiccoloPhetApplication;
-import edu.umd.cs.piccolo.util.PDebug;
 
 /**
  * Main class for the "Beer's Law Lab" application.
@@ -20,18 +19,9 @@ public class BeersLawLabApplication extends PiccoloPhetApplication {
 
     public BeersLawLabApplication( PhetApplicationConfig config ) {
         super( config );
-
         Frame parentFrame = getPhetFrame();
         addModule( new ConcentrationModule( parentFrame ) );
         addModule( new BeersLawModule( parentFrame ) );
-
-        // Dev: Start with the module number specified on the command line.
-        if ( isDeveloperControlsEnabled() ) {
-            String startModuleNumber = config.getOptionArg( "-startModule" );
-            if ( startModuleNumber != null ) {
-                setStartModule( getModule( Integer.valueOf( startModuleNumber ) ) );
-            }
-        }
     }
 
     public static void main( final String[] args ) {
