@@ -1,3 +1,4 @@
+7/31/12 #3395, add -startModule program arg for specifying start module (dev feature)
 7/20/12 Use @EqualsAndHashCode(callSuper = false) instead of @Data to avoid compile time warnings, see #3374
 7/20/12 Merged getScaledInstance and times into a single method, see #3374
 7/20/12 Merged getSubtractedInstance and minus into a single method, see #3374
